# HITSIC_RT1052

./: .gitignore  .gitmodules  README.md
HITSIC_RT1052_MCUX/: .cproject  .gitignore  .project  CMakeLists.txt  HITSIC_RT1052.mex  HITSIC_RT1052_MCUX LinkServer Debug.launch  HITSIC_RT1052_MCUX.sln  HITSIC_RT1052_MCUX.vcxproj  HITSIC_RT1052_MCUX.vcxproj.filters  armgcc.cmake
HITSIC_RT1052_MCUX/CMSIS - old/NN/NNSupportFunctions/: arm_nntables.c
HITSIC_RT1052_MCUX/CMSIS/NN/NNSupportFunctions/: arm_nntables.c
HITSIC_RT1052_MCUX/Debug/: HITSIC_RT1052_MCUX.axf  HITSIC_RT1052_MCUX_Debug.ld  HITSIC_RT1052_MCUX_Debug_library.ld  HITSIC_RT1052_MCUX_Debug_memory.ld  MIMXRT1052xxxxB_part.xml  makefile  objects.mk  sources.mk
HITSIC_RT1052_MCUX/Debug/amazon-freertos/freertos/: subdir.mk
HITSIC_RT1052_MCUX/Debug/amazon-freertos/freertos/portable/: subdir.mk
HITSIC_RT1052_MCUX/Debug/board/: board.su  clock_config.su  peripherals.su  pin_mux.su  subdir.mk
HITSIC_RT1052_MCUX/Debug/cjson/src/: cJSON_Utils.su  subdir.mk
HITSIC_RT1052_MCUX/Debug/component/i2c/: lpi2c_adapter.su  subdir.mk
HITSIC_RT1052_MCUX/Debug/component/lists/: generic_list.su  subdir.mk
HITSIC_RT1052_MCUX/Debug/component/serial_manager/: serial_manager.su  serial_port_uart.su  subdir.mk
HITSIC_RT1052_MCUX/Debug/component/uart/: lpuart_adapter.su  subdir.mk
HITSIC_RT1052_MCUX/Debug/device/: subdir.mk  system_MIMXRT1052.su
HITSIC_RT1052_MCUX/Debug/drivers/: fsl_adc.su  fsl_adc_etc.su  fsl_aipstz.su  fsl_aoi.su  fsl_bee.su  fsl_cache.su  fsl_clock.su  fsl_cmp.su  fsl_common.su  fsl_csi.su  fsl_dcdc.su  fsl_dcp.su  fsl_dmamux.su  fsl_edma.su  fsl_elcdif.su  fsl_enc.su  fsl_enet.su  fsl_ewm.su  fsl_flexcan.su  fsl_flexio.su  fsl_flexio_camera.su  fsl_flexio_camera_edma.su  fsl_flexio_i2c_master.su  fsl_flexio_i2s.su  fsl_flexio_i2s_edma.su  fsl_flexio_mculcd.su  fsl_flexio_mculcd_edma.su  fsl_flexio_spi.su  fsl_flexio_spi_edma.su  fsl_flexio_uart.su  fsl_flexio_uart_edma.su  fsl_flexram.su  fsl_flexspi.su  fsl_gpc.su  fsl_gpio.su  fsl_gpt.su  fsl_kpp.su  fsl_lpi2c.su  fsl_lpi2c_edma.su  fsl_lpspi.su  (+26 more)
HITSIC_RT1052_MCUX/Debug/drivers/freertos/: subdir.mk
HITSIC_RT1052_MCUX/Debug/libjpeg/src/: subdir.mk
HITSIC_RT1052_MCUX/Debug/osa/: subdir.mk  usb_osa_freertos.su
HITSIC_RT1052_MCUX/Debug/sdmmc/port/: fsl_sdmmc_event.su  subdir.mk
HITSIC_RT1052_MCUX/Debug/sdmmc/src/: subdir.mk
HITSIC_RT1052_MCUX/Debug/source/: HITSIC_RT1052_MCUX.su  isr.su  main.su  semihost_hardfault.su  subdir.mk
HITSIC_RT1052_MCUX/Debug/source/module/: drv_disp_lcd240.su  drv_extInt.su  drv_motor.su  drv_pitmgr.su  drv_uartmgr.su  rte_common.su  subdir.mk
HITSIC_RT1052_MCUX/Debug/source/rte/: subdir.mk
HITSIC_RT1052_MCUX/Debug/startup/: startup_mimxrt1052.su  subdir.mk
HITSIC_RT1052_MCUX/Debug/usb/device/class/: subdir.mk  usb_device_class.su
HITSIC_RT1052_MCUX/Debug/usb/device/source/: subdir.mk  usb_device_ch9.su  usb_device_dci.su
HITSIC_RT1052_MCUX/Debug/usb/device/source/ehci/: subdir.mk
HITSIC_RT1052_MCUX/Debug/usb/device/source/khci/: subdir.mk
HITSIC_RT1052_MCUX/Debug/usb/device/source/lpcip3511/: subdir.mk
HITSIC_RT1052_MCUX/Debug/usb/host/: subdir.mk  usb_host_devices.su  usb_host_framework.su  usb_host_hci.su
HITSIC_RT1052_MCUX/Debug/usb/host/class/: subdir.mk
HITSIC_RT1052_MCUX/Debug/usb/phy/: subdir.mk  usb_phy.su
HITSIC_RT1052_MCUX/Debug/utilities/: fsl_assert.su  fsl_debug_console.su  fsl_shell.su  fsl_str.su  subdir.mk
HITSIC_RT1052_MCUX/Debug/utilities/utilities/: fsl_notifier.su  subdir.mk
HITSIC_RT1052_MCUX/Debug/video/: fsl_csi_camera_adapter.su  fsl_mt9m114.su  fsl_ov7725.su  fsl_sccb.su  fsl_video_common.su  fsl_video_i2c.su  subdir.mk
HITSIC_RT1052_MCUX/Debug/xip/: subdir.mk
HITSIC_RT1052_MCUX/board/: board.c  board.h  clock_config.c  clock_config.c.bak  clock_config.h  clock_config.h.bak  dcd.c  peripherals.c  peripherals.c.bak  peripherals.h  peripherals.h.bak  pin_mux.c  pin_mux.h  sdmmc_config.c
HITSIC_RT1052_MCUX/component/uart/: lpuart_adapter.c
HITSIC_RT1052_MCUX/drivers/: fsl_csi.h  fsl_enc.h  fsl_flexspi.c
HITSIC_RT1052_MCUX/drivers/freertos/: fsl_lpuart_freertos.c
HITSIC_RT1052_MCUX/source/: ffconf.h  ffconf.h.bak  inc_fsl.h  inc_gnc.h  inc_std.h  inc_stl.hpp  isr.cpp  jconfig.h  main.cpp
HITSIC_RT1052_MCUX/source/module/: drv_disp_lcd240.hpp  drv_extInt.hpp  drv_motor.hpp  drv_pitmgr.hpp  drv_uartmgr.hpp  rte_common.hpp
HITSIC_RT1052_MCUX/source/platform/: rt1052_romapi.c  rt1052_romapi.h
HITSIC_RT1052_MCUX/source/platform/flexspi/: bl_flexspi.c.txt  bl_flexspi.h
HITSIC_RT1052_MCUX/source/platform/flexspi_nand/: flexspi_nand_flash.h
HITSIC_RT1052_MCUX/source/platform/flexspi_nor/: flexspi_nor_flash.h
HITSIC_RT1052_MCUX/usb/device/source/ehci/: usb_device_ehci.c
HITSIC_RT1052_MCUX/utilities/: fsl_debug_console_conf.h
HITSIC_RT1052_MCUX/video/: fsl_video_i2c.c
HITSIC_RT1052_MCUX/xip/: fire_imxrt1052_sdram_ini_dcd.c.txt  fire_imxrt1052_spiflash_config.c  fsl_flexspi_nor_boot.c  fsl_flexspi_nor_boot.h
HITSIC_RT1052_MCUX_old/: HITSIC_RT1052.mex
HITSIC_RT1052_MCUX_old/board/: clock_config.h  dcd.c  dcd.h  peripherals.c  peripherals.h  pin_mux.c
HITSIC_RT1052_MCUX_old/source/: include.hpp  isr.cpp  main.cpp
HITSIC_RT1052_MCUX_old/source/module/: drv_disp_lcd240.hpp  sys_extint.cpp  sys_pitmgr.cpp
HITSIC_RT1052_MCUX_old/xip/: fire_imxrt1052_spiflash_config.c
